# FulgorOutput

./: Cargo.toml  README.md  parsed_output.txt  test_chunk_anno.txt
src/: lib.rs  main.rs
src/stats/: mod.rs
src/tabular/: mod.rs
