[package]
name = "FulgorOutput"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0"
indicatif = "0.15"
polars = { version = "x", features = ["lazy", "strings", "list_to_struct", "regex", "dtype-struct", "range", "random", "log"]}